Fixed alignment issues

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3523,7 +3523,7 @@ input, select, textarea {
 								background-repeat: no-repeat;
 								content: '';
 								display: inline-block;
-								height: 3.75em;
+								height: 3.4em;
 								vertical-align: top;
 								width: 2em;
 							}
